# compas_fea2

./: .gitignore  LICENSE  README.md  conftest.py  environment.yml  example_results.db  mkdocs.yml  output_mesh.msh  pyproject.toml  requirements.txt  tasks.py
docs/: index.md  index.rst  installation.md  introduction.md  model.md  results.md
docs/api/: compas_fea2.backends.md  compas_fea2.base.md  compas_fea2.cli.md  compas_fea2.config.md  compas_fea2.job.md  compas_fea2.model.md  compas_fea2.model.model.rst  compas_fea2.model.rst  compas_fea2.problem.md  compas_fea2.registration.md  compas_fea2.results.md  compas_fea2.units.md  compas_fea2.utilities.md  index.rst
docs/backends/: index.rst
docs/stylesheets/: compas.css
docs/userguide/: basics.data.rst  basics.model.rst
docs/viewers/: index.rst
latest/: .buildinfo  api.html  backends.html  devguide.html  examples.html  genindex.html  gettingstarted.html  index.html  intro.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
latest/.doctrees/: api.doctree  backends.doctree  devguide.doctree  environment.pickle  examples.doctree  gettingstarted.doctree  index.doctree  intro.doctree  license.doctree  tutorial.doctree
latest/.doctrees/_templates/autosummary/: base.doctree  class.doctree  method.doctree  module.doctree
latest/.doctrees/api/: compas_fea2.UI.doctree  compas_fea2.doctree  compas_fea2.model.doctree  compas_fea2.problem.doctree  compas_fea2.utilities.doctree
latest/.doctrees/backends/: backends.abaqus.doctree  backends.doctree
latest/.doctrees/devguide/: overview.doctree
latest/.doctrees/tutorial/: umat.doctree
latest/_modules/: index.html
latest/_modules/compas_fea2/model/: bcs.html  constraints.html  elements.html  groups.html  ics.html  model.html  nodes.html  parts.html  releases.html  sections.html
latest/_modules/compas_fea2/model/materials/: concrete.html  (+3 more)
latest/_modules/compas_fea2/utilities/: functions.html
latest/_templates/autosummary/: base.html  class.html  method.html  module.html
latest/api/: compas_fea2.UI.html  compas_fea2.html  compas_fea2.job.html  compas_fea2.model.html  compas_fea2.model.model.html  compas_fea2.postprocess.html  compas_fea2.problem.html  compas_fea2.results.html  compas_fea2.units.html  compas_fea2.utilities.html  index.html
latest/backends/: backends.abaqus.html  backends.ansys.html  backends.html  index.html
latest/development/: index.html
latest/devguide/: overview.html
latest/tutorial/: umat.html
latest/userguide/: acknowledgements.html  basics.analysis.html  basics.data.html  basics.model.html  basics.overview.html  basics.problem.html  basics.results.html  basics.visualisation.html  gettingstarted.installation.html  gettingstarted.intro.html  gettingstarted.nextsteps.html  gettingstarted.requirements.html  index.html  license.html
latest/viewers/: index.html
scripts/: external_mesh_utils.py
src/compas_fea2/: __init__.py  base.py  cli.py  config.py  registration.py  units.py
src/compas_fea2/UI/viewer/: primitives.py  scene.py  viewer.py
src/compas_fea2/_units/: __init__.py
src/compas_fea2/job/: __init__.py  input_file.py
src/compas_fea2/model/: __init__.py  bcs.py  connectors.py  constraints.py  elements.py  fields.py  groups.py  ics.py  interactions.py  interfaces.py  model.py  nodes.py  parts.py  releases.py  sections.py  shapes.py
src/compas_fea2/model/materials/: __init__.py  aluminum.py  composite.py  concrete.py  material.py  steel.py  timber.py
src/compas_fea2/problem/: __init__.py  amplitudes.py  combinations.py  displacements.py  fields.py  groups.py  loads.py  outputs.py  patterns.py  problem.py  steps_combinations.py
src/compas_fea2/problem/steps/: __init__.py  dynamic.py  heattransfer.py  perturbations.py  quasistatic.py  static.py  step.py
src/compas_fea2/results/: __init__.py  _parser.py  database.py  fields.py  results.py  sql_wrapper.py
src/compas_fea2/utilities/: _devtools.py  _utils.py
tests/: test_bcs.py  test_cli.py  test_copy.py  test_elements.py  test_groups.py  test_ics.py  test_materials.py  test_model.py  test_model_fields.py  test_nodes.py  test_parts.py  test_results.py  test_results_database.py  test_sections.py
tests/data/: setup_test_db.py
tests/model/: test_bcs.py  test_cli.py  test_copy.py  test_elements.py  test_ics.py  test_model_fields.py  test_parts.py  test_sections.py  test_shapes.py
tests/problem/: test_amplitudes.py  test_combinations.py  test_displacements.py  test_fields.py  test_loads.py  test_problem_smoke.py
